# aiko_cross_platform

./: CMakeLists.txt  README.md  fitur
examples/: main.ak  tes.ak
include/: AstTree.hpp  CodeGen.hpp  Lexer.hpp  Parser.hpp  Token.hpp
src/: CodeGen.cpp  Lexer.cpp  Parser.cpp
src/exprHelpers/: generateArrayAccess.cpp  generateArrayElementPtr.cpp  generateArrayLiteral.cpp  generateBinary.cpp  generateFunctionCall.cpp  generateIdentifier.cpp  generateInput.cpp  generateLiteral.cpp  generateMemberAccess.cpp  generateStructInit.cpp  generateTypeof.cpp  generateUnary.cpp
src/runtime/: runtime.cpp  runtime.hpp
src/stmtHelpers/: handleAssignment.cpp  handleFor.cpp  handleFunctionDecl.cpp  handleGetPrint.cpp  handleIf.cpp  handlePrint.cpp  handlePrintArray.cpp  handleReturn.cpp  handleStructDecl.cpp  handleVarDeclaration.cpp
test/: test_codegen  test_codegen.cpp  test_lexer  test_lexer.cpp  test_parser  test_parser.cpp
